# ytscript

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml  requirements.txt  settings.json  todo
docs/: build-from-source.md  configuration.md  installation.md  usage.md
scripts/: checkHfToken.py
tests/: test_helpers.py  test_main.py
ytscript/: constants.py  helpers.py  main.py  settings.json
